# NBA

./: .env.example  .gitignore  package-lock.json  package.json
.claude/: launch.json  settings.local.json
.claude/plans/: joyful-weaving-sphinx.md
analytics/: pyproject.toml
analytics/analytics/: api.py  config.py  db.py  models.py
analytics/analytics/explanations/: generator.py  templates.py
analytics/analytics/fatigue/: model.py
analytics/analytics/ingestion/: base.py  nba_api.py
analytics/analytics/jobs/: nightly.py  pregame.py
analytics/analytics/metrics/: base.py
analytics/analytics/metrics/player/: bis.py  drs.py  lfi.py
analytics/analytics/metrics/team/: gop.py  tsc.py
analytics/analytics/streaks/: classifier.py
analytics/tests/: test_metrics.py
docs/: 01-PRD.md  02-METRICS.md  03-DATA-MODEL.md  04-ARCHITECTURE.md  05-UX.md
scripts/: compute-metrics.ts  compute-projections.ts  create-auth-tables.ts  fetch-schedule.ts  ingest.py  ingest.ts  orchestrate.ts  requirements.txt  scrape-salaries.ts  update-scores.ts
web/: drizzle.config.ts  package-lock.json  package.json
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
web/src/app/account/: manage-button.tsx  page.tsx
web/src/app/ask/: ask-engine.tsx  page.tsx
web/src/app/compare/: layout.tsx  loading.tsx  page.tsx
web/src/app/games/: games-refresh.tsx  loading.tsx  page.tsx
web/src/lib/: auth.ts  cache.ts  constants.ts  formatting.ts  nba-data.ts  projections.ts  scouting.ts  stripe.ts  types.ts  usage.ts  utils.ts  watchlist.ts
web/src/lib/db/: index.ts  (+2 more)
(+79 files in other folders)
